# pyVARED

./: .coverage  .gitignore  .travis.yml  IpCoreGeneration.py  README.md  generateCRegisterMap.py  generateHtmlRegisterMap.py  generatePythonRegisterMap.py  generateTextRegisterMap.py  generation.yml  main.py  pyproject.toml  registerDefinition.py  sonar-project.properties  templateFileGeneration.py  vhdlFileParser.py
ip_repo/: test_v1_0_S00_AXI.vhd
plugins/: generateCRegisterMap.py  generateHtmlRegisterMap.py  generateJSONRegisterMap.py  generateMarkdownRegisterMap.py  generatePythonRegisterMap.py  generateRustRegisterMap.py  generateTextRegisterMap.py  templateFileGeneration.py
template/: axi_template.vhd
tests/: tests.py
